force-app/main/default/objects/PricebookEntry/fields/Customer_Part_Number__c.field-meta.xml
<CustomField>
    <fullName>Customer_Part_Number__c</fullName>
    <label>Customer Part Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>