force-app/main/default/objects/PricebookEntry/fields/ExternalPriceBookEntry__c.field-meta.xml
<CustomField>
    <fullName>ExternalPriceBookEntry__c</fullName>
    <externalId>true</externalId>
    <label>ExternalPriceBookEntry</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>