force-app/main/default/objects/PricebookEntry/fields/Lead_Time__c.field-meta.xml
<CustomField>
    <fullName>Lead_Time__c</fullName>
    <label>Lead Time</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Less than a Week</fullName>
            </value>
            <value>
                <fullName>2 - 4 Weeks</fullName>
            </value>
            <value>
                <fullName>1 - 3 Months</fullName>
            </value>
            <value>
                <fullName>3 - 6 Months</fullName>
            </value>
            <value>
                <fullName>6 - 12 Months</fullName>
            </value>
            <value>
                <fullName>More than a Year</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>