force-app/main/default/objects/PricebookEntry/fields/System__c.field-meta.xml
<CustomField>
    <fullName>System__c</fullName>
    <label>System</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>System</valueSetName>
    </valueSet>
</CustomField>